# actix-rest-api-server

./: docker-compose.yml
db/: Dockerfile
db/init.d/: init.sql
server/: .env  Cargo.toml  Dockerfile
server/migrations/2021-06-29-082001_create_recipes/: down.sql
server/src/: main.rs  models.rs  recipes.rs  schema.rs
